@@ -3,12 +3,12 @@ package com.itexc.dom.service_impl;
 import com.itexc.dom.domain.Appointment;
 import com.itexc.dom.domain.Patient;
 import com.itexc.dom.domain.projection.AppointmentView;
-import com.itexc.dom.domain.projection.DocDayView;
-import com.itexc.dom.domain.projection.DocSessionView;
+import com.itexc.dom.domain.projection.DoctorDay;
+import com.itexc.dom.domain.projection.DoctorSessionView;
 import com.itexc.dom.repository.AppointmentRepository;
 import com.itexc.dom.repository.DocSessionRepository;
 import com.itexc.dom.domain.DTO.AppointmentDto;
-import com.itexc.dom.domain.DocSession;
+import com.itexc.dom.domain.DoctorSession;
 import com.itexc.dom.domain.Doctor;
 import com.itexc.dom.domain.enums.AppointmentStatusE;
 import com.itexc.dom.domain.enums.ERROR_CODE;
@@ -16,12 +16,10 @@ import com.itexc.dom.exceptions.ValidationException;
 import com.itexc.dom.sevice.AppointmentService;
 import com.itexc.dom.sevice.DoctorService;
 import com.itexc.dom.sevice.PatientService;
-import org.hibernate.Session;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 public class AppointmentServiceImpl implements AppointmentService {
@@ -33,7 +31,7 @@ public class AppointmentServiceImpl implements AppointmentService {
     PatientService patientService;
 
     @Autowired
-    AppointmentRepository appointmentRepository;
+    AppointmentRepository<Appointment> appointmentRepository;
 
     @Autowired
     DocSessionRepository docSessionRepository;
@@ -43,15 +41,15 @@ public class AppointmentServiceImpl implements AppointmentService {
         Appointment newAppointment = new Appointment();
         Doctor doctor = doctorService.findById(appointment.getDoctor());
         Patient patient = patientService.findById(appointment.getPatient());
-        DocSession session = docSessionRepository.findById(appointment.getSession()).orElse(null);
+        DoctorSession session = docSessionRepository.findById(appointment.getSession()).orElse(null);
         if (isSessionReserved(session,appointment.getDate(),doctor)) throw new ValidationException(ERROR_CODE.INVALID_SESSION);
-            newAppointment.setDoctor(doctor);
+        newAppointment.setDoctor(doctor);
         newAppointment.setPatient(patient);
         newAppointment.setSession(session);
         newAppointment.setReason(appointment.getReason());
         newAppointment.setDate(appointment.getDate());
         newAppointment.setStatus(AppointmentStatusE.PROGRAMED.toString());
-        return new AppointmentView((Appointment) appointmentRepository.save(newAppointment));
+        return new AppointmentView( appointmentRepository.save(newAppointment));
     }
 
     @Override
@@ -59,19 +57,19 @@ public class AppointmentServiceImpl implements AppointmentService {
         Appointment appointmentToUpdate = findById(appointmentId);
         appointmentToUpdate.setReason(appointment.getReason());
         appointmentToUpdate.setDate(appointment.getDate());
-        return new AppointmentView((Appointment) appointmentRepository.save(appointmentToUpdate));
+        return new AppointmentView(appointmentRepository.save(appointmentToUpdate));
     }
 
     @Override
     public List<AppointmentView> findAll() {
-        return appointmentRepository.findAllOrderByIdDesc();
+        return appointmentRepository.findAllOrderByIdDesc().stream().map(AppointmentView::new).toList();
+
     }
 
     @Override
     public List<AppointmentView> findAllByPatient(Long patientId) throws Throwable {
         Patient patient = patientService.findById(patientId);
-        List<Appointment> app = appointmentRepository.findAllByPatient(patient);
-        return app.stream().map(AppointmentView::new).collect(Collectors.toList());
+        return appointmentRepository.findAllByPatient(patient).stream().map(AppointmentView::new).toList();
     }
 
     @Override
@@ -96,51 +94,47 @@ public class AppointmentServiceImpl implements AppointmentService {
 
     @Override
     public Appointment findById(Long appointmentId) throws Throwable {
-        return (Appointment) appointmentRepository.findById(appointmentId)
+        return appointmentRepository.findById(appointmentId)
                 .orElseThrow(() -> new ValidationException(ERROR_CODE.INEXISTANT_APPOINTMENT));
 
     }
 
     @Override
-    public List<DocDayView> getDocSchedule(long doc) throws Throwable {
-        List<DocDayView> docSchedule = new ArrayList<>();
-        Doctor doctor = doctorService.findById(doc);
-        Appointment lastAppointment = (Appointment) appointmentRepository.findFirstByOrderByDateDesc().orElse(null);
+    public List<DoctorDay> getDocSchedule(long doctorId) throws Throwable {
+        List<DoctorDay> docSchedule = new ArrayList<>();
+        Doctor doctor = doctorService.findById(doctorId);
+        Appointment lastAppointment = appointmentRepository.findFirstByOrderByDateDesc().orElse(null);
         if (lastAppointment == null) return docSchedule;
-        List<Date> dates = getDaysBetweenDates(new Date(), lastAppointment.getDate());
-        docSchedule = dates.stream()
-                .map(date -> new DocDayView(date, sessionsListByDayAndDoc(date, doctor)))
-                .collect(Collectors.toList());
-        return docSchedule;
+        List<Date> days = getDaysBetweenDates(new Date(), lastAppointment.getDate());
+        return days.stream()
+                .map(day -> new DoctorDay(day, sessionsListByDayAndDoc(day, doctor)))
+                .toList();
     }
 
-    private List<DocSessionView> sessionsListByDayAndDoc(Date date, Doctor doctor) {
-        List<DocSessionView> result = new ArrayList<>();
-        List<DocSession> sessions = docSessionRepository.findAll();
-        for (DocSession docSess : sessions) {
-            result.add(new DocSessionView(docSess, isSessionReserved(docSess, date, doctor)));
-        }
-
-        return result;
+    private List<DoctorSessionView> sessionsListByDayAndDoc(Date date, Doctor doctor) {
+        List<DoctorSession> sessions = docSessionRepository.findAll();
+        return sessions.stream()
+                .map(session -> new DoctorSessionView(session, isSessionReserved(session, date, doctor)))
+                .toList();
     }
 
-    public boolean isSessionReserved(DocSession session, Date date, Doctor doctor) {
-        Appointment appointment = (Appointment) appointmentRepository.findBySessionAndDateAndDoctor(session, date, doctor)
+    public boolean isSessionReserved(DoctorSession session, Date date, Doctor doctor) {
+        Appointment appointment = appointmentRepository.findBySessionAndDateAndDoctor(session, date, doctor)
                 .orElse(null);
         return appointment != null;
     }
 
-    public static List<Date> getDaysBetweenDates(Date startdate, Date enddate) {
+    public static List<Date> getDaysBetweenDates(Date startDate, Date endDate) {
         List<Date> dates = new ArrayList<>();
         Calendar calendar = new GregorianCalendar();
-        calendar.setTime(startdate);
+        calendar.setTime(startDate);
 
-        while (calendar.getTime().before(enddate)) {
+        while (calendar.getTime().before(endDate)) {
             Date result = calendar.getTime();
             dates.add(result);
             calendar.add(Calendar.DATE, 1);
         }
-        dates.add(enddate);
+        dates.add(endDate);
         return dates;
     }
 
